# gst-opencv-debayer

./: Makefile  Makefile.in  README.md  libtool  meson.build
src/: Makefile  Makefile.am  Makefile.in  gstopencv.cpp  gstopencvdebayer.cpp  gstopencvdebayer.h
